Updated frontend heading

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,8 @@
   </style>
 </head>
 <body>
-  <h2>Student Management (Simple Frontend)</h2>
+  <h2>Student Management App (Updated)</h2>
+
 
   <div>
     <input id="name" placeholder="Name">
